# vru

./: Cargo.toml
.cargo/: config.toml
rac/: Cargo.toml
rac/src/: concat.rs  curve25519_dalek_m.rs  elliptic.rs  lib.rs  line.rs  schnorr.rs  secp256k1_m.rs
vru-core/: Cargo.toml
vru-core/src/: global.rs  handshake.rs  lib.rs  local.rs  terminate.rs  utils.rs  wire.rs
vru-core/src/tests/: wire.rs
vru-kyber/: Cargo.toml
vru-kyber/src/: coefficient.rs  indcpa.rs  kem.rs  lib.rs  poly.rs  poly_inner.rs  size.rs  test_vectors.json
vru-node/: Cargo.toml
vru-node/src/: connection.rs  database.rs  handshake.rs  lib.rs  listener_unix.rs  main.rs  node.rs  process.rs  terminate.rs  utils.rs  wire.rs
vru-node/src/tests/: wire.rs
vru-noise/: Cargo.toml
vru-noise/src/: cipher_state.rs  config.rs  handshakes.rs  hash.rs  lib.rs  symmetric_state.rs  tests.rs
vru-noise/src/handshake/: handshake_state.rs  mod.rs  pattern.rs  token.rs
vru-noise/src/state/: cipher_state.rs  mod.rs  noise_nonce.rs  state.rs  symmetric_state.rs  traits.rs
vru-noise/src/test/: lightning.rs  mod.rs  vector.rs  x25519_aesgcm_sha256.rs  x25519_aesgcm_sha512.rs  x25519_chachapoly_sha256.rs
vru-noise/vru-noise-macros/: Cargo.toml
vru-noise/vru-noise-macros/src/: lib.rs  pattern.rs
vru-processor/: Cargo.toml
vru-processor/src/: lib.rs
vru-session/: Cargo.toml
vru-session/src/: channel.rs  lib.rs  node.rs  processor.rs  session.rs
vru-session/src/handshake/: key.rs  xx.rs
vru-sphinx/: Cargo.toml
vru-sphinx/src/: lib.rs  packet.rs  path.rs  sphinx.rs  test.rs
vru-tcp/: Cargo.toml
vru-tcp/src/: lib.rs
vru-transport/: Cargo.toml
vru-transport/src/: datagram.rs  lib.rs
vru-transport/src/protocol/: ake.rs  coding.rs  format.rs  lattice.rs  mod.rs  noise.rs  post_quantum.rs  sphinx.rs
vru-transport/src/protocol/ake/: key.rs  mod.rs  ops.rs  xk.rs
vru-udp/: Cargo.toml
vru-udp/src/: command.rs  global.rs  lib.rs  local.rs
vru-udp/src/linkage/: datagram.rs  mod.rs
vru-udp/src/session/: key.rs  mod.rs  noise.rs  test.rs  xx.rs
