[package]
name = "rac"
version = "1.1.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Traits and types to work with elliptic curve"
repository = "https://github.com/vlad9486/vru"

[dependencies]
generic-array = { version = "0.14" }
secp256k1 = { version = "0.17", optional = true }
curve25519-dalek = { version = "2.1", optional = true }
