[package]
name = "rac"
version = "1.3.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Traits and types to work with elliptic curve"
repository = "https://github.com/vlad9486/vru"

[dependencies]
generic-array = { version = "0.14", features = ["serde"] }
secp256k1 = { version = "0.19", optional = true }
curve25519-dalek = { version = "3.0", optional = true }
digest = { version = "0.9" }

[dev-dependencies]
rand = "0.7"
sha3 = "0.9"
