[package]
name = "rac"
version = "1.3.4"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Traits and types to work with elliptic curve"
repository = "https://github.com/vlad9486/vru"

[dependencies]
generic-array = { version = "0.14", features = ["serde"] }
secp256k1 = { version = "0.20", optional = true }
curve25519-dalek = { version = "3.1", optional = true }
digest = { version = "0.9" }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
rand = "0.8"
sha3 = "0.9"
