[package]
name = "vru-core"
version = "0.1.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"

[dependencies]
rac = { version = "1.3" }
vru-transport = { path = "../vru-transport" }
rand = { version = "0.8" }
bytes = { version = "1.0" }
tokio = { version = "1.1", features = ["rt-multi-thread", "io-util", "sync", "net", "io-std", "macros", "signal"] }
tokio-util = { version = "0.6", features = ["codec"] }
tokio-stream = { version = "0.1" }
futures = { version = "0.3" }
pin-project-lite = { version = "0.2" }
serde = { version = "1.0", features = ["derive"] }

tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }

structopt = { version = "0.3" }
sled = { version = "0.34" }
