[package]
name = "vru-kyber"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
rac = { path = "../rac" }
digest = { version = "0.9" }
rand = { version = "0.7" }
sha3 = { version = "0.9" }
pq-kem = { version = "0.4" }

[dev-dependencies]
hex = { version = "0.4" }
