[package]
name = "vru-kyber"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
rac = { version = "1.3" }
digest = { version = "0.9" }
rand = { version = "0.8" }
sha3 = { version = "0.9" }
pq-kem = { version = "0.5" }
subtle = { version = "2.4" }

[dev-dependencies]
hex = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
