[package]
name = "vru-node"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[[bin]]
name = "vru-node-udp"
path = "src/main.rs"

[[bin]]
name = "vru-udp"
path = "src/bin/client.rs"

[dependencies]
vru-transport = { path = "../vru-transport" }
vru-udp = { path = "../vru-udp" }
rac = { version = "1.3" }
rand = { version = "0.8" }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.2" }
structopt = { version = "0.3" }
sled = { version = "0.34" }
bincode = { version = "1.3" }
libc = { version = "0.2" }
log = { version = "0.4" }
ctrlc = { version = "3.1" }
popol = { version = "0.4" }
serde = { version = "1.0" }
