[package]
name = "vru-noise"
version = "1.3.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Noise handshake protocol implemented in Rust"
repository = "https://github.com/vlad9486/vru"

[dependencies.byteorder]
version = "1.3"

[dependencies.aead]
version = "0.3"

[dependencies.digest]
version = "0.9"

[dependencies.hkdf]
version = "0.9"

[dependencies.generic-array]
version = "0.14"

[dependencies.hex]
version = "0.4"

[dev-dependencies.rac]
version = "1.3"
features = ["secp256k1", "curve25519-dalek"]

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.curve25519-dalek]
version = "3.0"

[dev-dependencies.sha2]
version = "0.9"

[dev-dependencies.aes-gcm]
version = "0.6"
features = ["zeroize"]

[features]
std = []
