[package]
name = "vru-noise"
version = "1.3.1"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Noise handshake protocol implemented in Rust"
repository = "https://github.com/vlad9486/vru"

[dependencies.aead]
version = "0.4"

[dependencies.digest]
version = "0.9"

[dependencies.hkdf]
version = "0.11"

[dependencies.byteorder]
version = "1.4"

[dependencies.generic-array]
version = "0.14"

[dependencies.hex]
version = "0.4"

[dev-dependencies.rac]
path = "../rac"
features = ["curve25519-dalek"]

[dev-dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.curve25519-dalek]
version = "3.1"

[dev-dependencies.sha2]
version = "0.9"

[dev-dependencies.aes-gcm]
version = "0.9"
features = ["zeroize"]

[features]
std = []
