[package]
name = "vru-session"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0" }
thiserror = { version = "1.0" }

rac = { version = "1.3", features = ["curve25519-dalek"] }
vru-noise = { path = "../vru-noise" }
vru-kyber = { path = "../vru-kyber" }
curve25519-dalek = { version = "3.1", features = ["serde"] }
chacha20poly1305 = { version = "0.8" }
sha3 = { version = "0.9" }
base64 = { version = "0.13" }
hex = { version = "0.4" }
byteorder = { version = "1.4" }

[dev-dependencies]
rand = { version = "0.8" }
