[package]
name = "vru-sphinx"
version = "1.5.1"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description = "Sphinx mix network packet processor implemented in Rust"
repository = "https://github.com/vlad9486/vru"

[dependencies.rac]
path = "../rac"

[dependencies.digest]
version = "0.9"

[dependencies.crypto-mac]
version = "0.11"

[dependencies.cipher]
version = "0.3"

[dependencies.serde]
version = "1.0"
features = ["derive"]
optional = true

[dev-dependencies.rac]
path = "../rac"
features = ["curve25519-dalek"]

[dev-dependencies.either]
version = "1.6"

[dev-dependencies.rand]
version = "0.8"

[dev-dependencies.curve25519-dalek]
version = "3.1"
features = ["serde"]

[dev-dependencies.hmac]
version = "0.11"

[dev-dependencies.sha2]
version = "0.9"

[dev-dependencies.chacha20]
version = "0.7"
features = ["cipher"]

[dev-dependencies.tirse]
version = "0.6"
features = ["use_std"]

[dev-dependencies.hex]
version = "0.4"
