[package]
name = "vru-tcp"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
rac = { version = "1.3" }
vru-session = { path = "../vru-session" }
mio = { version = "0.7", features = ["os-poll", "tcp"] }
thiserror = { version = "1.0" }
log = { version = "0.4" }
