[package]
name = "vru-transport"
version = "0.1.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/vlad9486/vru"

[dependencies]
vru-noise = { version = "1.2", features = ["vru-noise-macros", "chacha20poly1305"] }
vru-sphinx = { version = "1.3", features = ["serde"] }
futures = { version = "0.3" }
byteorder = { version = "1.3" }
serde = { version = "1.0" }
tirse = { version = "0.6", features = ["use_std"] }
either = { version = "1.6" }
generic-array = { version = "0.14" }
secp256k1 = { version = "0.17" }
chacha20poly1305 = { version = "0.5" }
sha2 = { version = "0.9" }
chacha = { version = "0.3" }
hmac = { version = "0.9" }
