[package]
name = "vru-transport"
version = "0.1.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/vlad9486/vru"

[dependencies]
rac = { version = "1.3", features = ["curve25519-dalek"] }
vru-noise = { version = "1.3.1", path = "../vru-noise" }
vru-session = { path = "../vru-session" }
vru-sphinx = { version = "1.5", features = ["serde"] }
futures = { version = "0.3" }
byteorder = { version = "1.3" }
serde = { version = "1.0" }
tirse = { version = "0.6", features = ["use_std"] }
either = { version = "1.6" }
generic-array = { version = "0.14" }
curve25519-dalek = { version = "3.0" }

pqcrypto-kyber = { version = "0.6" }
pqcrypto-traits = { version = "0.3" }
num-bigint = { version = "0.3" }
num-traits = { version = "0.2" }

chacha20poly1305 = { version = "0.6" }
sha2 = { version = "0.9" }
sha3 = { version = "0.9" }
chacha20 = { version = "0.5" }
hmac = { version = "0.9" }
hkdf = { version = "0.9" }
rand = { version = "0.7" }
failure = { version = "0.1", features = ["derive"] }

[dev-dependencies]
hex = "0.4"
