[package]
name = "vru-transport"
version = "0.1.0"
authors = ["Vladislav Melnik <vlad9486@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/vlad9486/vru"

[dependencies]
rac = { path = "../rac", features = ["curve25519-dalek"] }
vru-noise = { path = "../vru-noise" }
vru-sphinx = { path = "../vru-sphinx", features = ["serde"] }
serde = { version = "1.0" }
tirse = { version = "0.6", features = ["use_std"] }

byteorder = { version = "1.3" }
either = { version = "1.6" }
rand = { version = "0.7" }
base64 = { version = "0.13" }

pqcrypto-kyber = { version = "0.6" }
pqcrypto-traits = { version = "0.3" }
num-bigint = { version = "0.3" }
num-traits = { version = "0.2" }

curve25519-dalek = { version = "3.0", features = ["serde"] }
chacha20poly1305 = { version = "0.7" }
sha2 = { version = "0.9" }
sha3 = { version = "0.9" }
chacha20 = { version = "0.6" }
hmac = { version = "0.10" }

[dev-dependencies]
hex = { version = "0.4" }
