[package]
name = "vru-udp"
version = "0.1.0"
authors = ["Vladislav Melnik <vladislav.melnik@protonmail.com>"]
edition = "2018"

[dependencies]
log = { version = "0.4" }
serde = { version = "1.0" }
popol = { version = "0.4" }
rand = { version = "0.8" }
thiserror = { version = "1.0" }

rac = { version = "1.3", features = ["curve25519-dalek"] }
vru-session = { path = "../vru-session" }
